# the-truth

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
truth/: agents.py  cli.py  debate.py
truth/prompts/: _shared.md  advocate.md  judge.md
